qtscxml/tests/auto/parser/data/eventnames.scxml
<?xml version="1.0" ?>
<!--
// Copyright (C) 2016 The Qt Company Ltd.
// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only WITH Qt-GPL-exception-1.0
-->
<scxml xmlns="http://www.w3.org/2005/07/scxml" version="1.0" name="eventnames">
    <state id="a">
        <onentry>
            <send event="valid"/>
            <send event="still.valid"/>
            <send event="still-valid"/>
            <send event="still:valid"/>
            <send event="-valid-"/>
            <send event=".invalid"/>
            <send event="invalid."/>
            <send event="in valid"/>
            <send event="&#x00ff;valid"/>
        </onentry>

        <transition event="valid"/>
        <transition event="still.valid"/>
        <transition event="still-valid"/>
        <transition event="still:valid"/>
        <transition event="-valid-"/>
        <transition event=".invalid"/>
        <transition event="invalid."/>
        <transition event="also valid"/>
        <transition event="&#x00ff;valid"/>
    </state>
</scxml>
